added video and url changes to site

--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,8 @@ dist-ssr
 
 
 # Public images
-#public/*.png
-#public/*.jpg
+public/*.png
+public/*.jpg
 public/*.jpeg
 public/*.gif
 public/*.webp
